--- a/index.html
+++ b/index.html
@@ -22,35 +22,7 @@
           <button class="btn-delete">Delete completed</button>
         </div>
         <div class="list-box">
-          <ul class="to-do-list">
-            <!-- <li>
-              Pozmywać naczynia
-              <button class="btn btn-close" title="Complete">
-                <i class="fa fa-close"></i>
-              </button>
-              <button class="btn btn-trash" title="Delete">
-                <i class="fa fa-trash"></i>
-              </button>
-            </li>
-            <li>
-              Wyprasować ciuchy
-              <button class="btn btn-close" title="Complete">
-                <i class="fa fa-close"></i>
-              </button>
-              <button class="btn btn-trash" title="Delete">
-                <i class="fa fa-trash"></i>
-              </button>
-            </li>
-            <li>
-              Poodkurzać mieszkanie
-              <button class="btn btn-close" title="Complete">
-                <i class="fa fa-close"></i>
-              </button>
-              <button class="btn btn-trash" title="Delete">
-                <i class="fa fa-trash"></i>
-              </button>
-            </li> -->
-          </ul>
+          <ul class="to-do-list"></ul>
         </div>
       </div>
     </div>
