fix counter; add optional text for empty list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="max-width">
       <div class="container">
-        <div class="title-box">To Do <span id="counter">0</span></div>
+        <div class="title-box"><span id="counter">Nothing To Do</span></div>
         <div class="input-box">
           <input type="text" />
           <button class="btn-add">Add new task</button>
