--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
         <div class="title-box"><span id="counter">Nothing To Do</span></div>
         <div class="input-box">
           <input type="text" />
-          <button class="btn-add">Add new task</button>
-          <button class="btn-delete">Delete completed</button>
+          <!-- <select id="list" title="importance level">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select> -->
+          <button class="btn-add">Add</button>
+          <button class="btn-delete">Delete</button>
         </div>
         <div class="list-box">
           <ul class="to-do-list"></ul>
