--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="title-box"><span id="counter">Nothing To Do</span></div>
         <div class="input-box">
           <input type="text" />
-          <!-- <select id="list" title="importance level">
+          <select id="rankList" title="Importance level">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -29,7 +29,7 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-          </select> -->
+          </select>
           <button class="btn-add">Add</button>
           <button class="btn-delete">Delete</button>
         </div>
